# puzzles

./: .gitignore  Procfile  pyproject.toml  requirements.txt
notebooks/: Untitled.ipynb  prisoners_100.py
tests/: test_puzzles.py
