[tool.poetry]
name = "puzzles"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.81.0"
ipykernel = "^5.5.3"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.4b2", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
